--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=family=Sora:wght@200;400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap");
+
+@layer base {
+  body {
+    @apply bg-[#111111];
+  }
+}
